# JuanitaBanana

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  build_rpm.sh  diff  fix_spoof.py  test.html
.github/: FUNDING.yml
.github/workflows/: codeql.yml  rust.yml
docs/: AD_INTOXICATION.md  FUNCTIONALITIES.md  FUNCTIONALITIES_AFTERDARK.md  MANIFESTO.md  OVERLAY_NETWORKS.md  aggressive_unsubscribe.md  chore_list.md  known_issues.md
docs/changelog/1.3.x/: 1.3.0.txt  1.3.1.txt  1.3.2.txt  1.3.3.txt  1.3.4.txt  1.3.5.txt
docs/changelog/1.4.x/: 1.4.0.txt
docs/spec/: GDPR_ARTICLE_17_TEMPLATE.md  MANIFESTO.md
scripts/: anti_fingerprint.js  autofill_injection.js  build_hnsd.sh  config.js  form_interact.js  form_monitor.js  toxic_warning.js
scripts/js/: ad_intoxication.js  config.js  toxic_warning.js
scripts/sh/: build_arti.sh  build_hnsd.sh  build_torsocks.sh  check_cleanliness.sh
src/: ban.rs  config.rs  embedder.rs  gui.rs  intoxication.rs  main.rs  noise.rs  spoof.rs
src/ad_intoxication/: engine.rs
src/browsing/: browser.rs  credentials_ui.rs  gui.rs  gui_plugin.rs  internal_pages.rs  message_handler.rs  mod.rs  policy.rs  tab.rs  tab_cleanup.rs
src/fingerprint/: spoof.rs
src/privacy/: mod.rs
src/resolver/: helpers.rs  mod.rs
src/search/: ad_intoxication.rs  intoxication.rs  mod.rs  noise.rs
src/tor/: daemon.rs  mod.rs  proxy.rs  webcontext.rs
src/unsubscribe/: crawler.rs  db.rs  db_tests.rs  email.rs  mod.rs  registry.rs  report.rs
src/util/: ban.rs  competitors.rs  config.rs  config_html.rs  credentials.rs  debug.rs  downloads.rs  font.rs  image.rs  mod.rs
templates/: about.html  config.html  contact.html  contribute.html  history.html  home.html  passwords_locked.html  passwords_unlocking.html  passwords_vault.html  proxy_error.html  tls_error.html
templates/errors/: proxy.html  tls.html
templates/pages/: about.html  config.html  contact.html  contribute.html  history.html  home.html
templates/passwords/: locked.html  unlocking.html  vault.html
templates/styles/: competitors.css  components.css  fonts.css  layout.css  local_html.css  tokens.css  vault.css
(+77 files in other folders)
