[package]
name = "juanita-banana"
version = "0.1.0"
edition = "2021"

# ── Engine Stack ──────────────────────────────────────────────
# Motor:    WebKitGTK (Pragmatic fallback)
# Meta:     Return to Servo once its HTTP/2 stack matures
# UI:       GTK3 Native
# ────────────────────────────────────────────────────────────

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
gtk = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_40"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
