[package]
name = "juanita-banana"
version = "0.7.0"
edition = "2021"

# ── Engine Stack ──────────────────────────────────────────────
# Motor:    WebKitGTK (Pragmatic fallback)
# Meta:     Return to Servo once its HTTP/2 stack matures
# UI:       GTK3 Native
# ────────────────────────────────────────────────────────────

[dependencies]

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
gtk = "0.18"
webkit2gtk = { version = "2.0", features = ["v2_40"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1.10"
rand = "0.8"
roxmltree = "0.19"
urlencoding = "2.1"
bincode = "1.3.3"
gethostname = "1.1.0"
sha2 = "0.11.0"
base64 = "0.22.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
